--- a/vue_19_1120/public/index.html
+++ b/vue_19_1120/public/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue_19_1120</title>
+    <title>豆瓣电影桥接</title>
+    <style>
+      *{padding: 0; margin: 0;}
+    </style>
   </head>
   <body>
     <noscript>
